prevent horizontal scroll

--- a/www/css/site.scss
+++ b/www/css/site.scss
@@ -2,6 +2,7 @@ $midBlue: #3465a4;
 $lightBlue: #3d72d7;
 
 body {
+    overflow-x:hidden;
     margin: 0px;
     line-height: 1.4em;
     font-size: 18px;
